--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "chat-app",
+  "name": "TextTronix:Stay connected, always.",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
