--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -7,13 +7,17 @@ on:
     branches: [ "main" ]
 
 jobs:
-
   build:
-
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Build the Docker image
-    -  run: docker build . --file Dockerfile --tag thowfeeksalim/text:$(date +%s)
-    -  run:  docker push thowfeeksalim/text:$(date +%s)
+    - uses: actions/checkout@v2
+    - name: Login to Docker Hub
+      uses: docker/login-action@v1
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
+    - name: Build and Push Docker image
+      run: |
+        docker build . --file Dockerfile --tag thowfeeksalim/text:$(date +%s)
+        docker push thowfeeksalim/text:$(date +%s)
